; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_fs-util.c_unlink_tempfilep.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_fs-util.c_unlink_tempfilep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c".XXXXXX\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unlink_tempfilep([0 x i8]* %0) #0 {
  %2 = alloca [0 x i8]*, align 8
  store [0 x i8]* %0, [0 x i8]** %2, align 8
  %3 = load [0 x i8]*, [0 x i8]** %2, align 8
  %4 = getelementptr inbounds [0 x i8], [0 x i8]* %3, i64 0, i64 0
  %5 = call i32 @endswith(i8* %4, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = load [0 x i8]*, [0 x i8]** %2, align 8
  %9 = getelementptr inbounds [0 x i8], [0 x i8]* %8, i64 0, i64 0
  %10 = call i32 @unlink_noerrno(i8* %9)
  br label %11

11:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @endswith(i8*, i8*) #1

declare dso_local i32 @unlink_noerrno(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
